feat: 调整ui, 展现订单信息

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.16)
 
 project(fix-client VERSION 0.1 LANGUAGES CXX)
 
+set(QT_FORCE_MIN_CMAKE_VERSION_FOR_USING_QT 3.19)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
@@ -23,29 +24,6 @@ find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools)
 
 set(TS_FILES fix-client_zh_CN.ts)
 
-#if(WIN32)
-#find_library(
-#  QUICKFIX_LIBRARY
-#  NAMES quickfixd
-#  HINTS "E:/quickfix/lib"
-#  PATHS "E:/quickfix/lib"
-#)
-#else()
-#find_library(
-#  QUICKFIX_LIBRARY
-#  NAMES quickfix
-#  HINTS /usr/local/lib
-#  PATHS /usr/local/lib
-#)
-#endif()
-
-if(QUICKFIX_LIBRARY)
-  message(STATUS "Found QuickFix library: ${QUICKFIX_LIBRARY}")
-else()
-  message(FATAL_ERROR "Could not find QuickFix library")
-endif()
-
-
 set(PROJECT_SOURCES
         main.cpp
         mainwindow.cpp
@@ -66,6 +44,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         fixwidget.h fixwidget.cpp fixwidget.ui
         Context.h
         Applicationbridge.h Applicationbridge.cpp
+        FixClientLogFactory.h FixClientLogFactory.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET fix-client APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
@@ -89,7 +68,11 @@ else()
     qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
 endif()
 
-target_link_libraries(fix-client PUBLIC Qt${QT_VERSION_MAJOR}::Widgets "${CMAKE_CURRENT_SOURCE_DIR}/lib/quickfix/quickfixd.lib" "${CMAKE_CURRENT_SOURCE_DIR}/lib/spdlog/spdlogd.lib")
+if(WIN32)
+    target_link_libraries(fix-client PUBLIC Qt${QT_VERSION_MAJOR}::Widgets "${CMAKE_CURRENT_SOURCE_DIR}/lib/quickfix/quickfixd.lib" "${CMAKE_CURRENT_SOURCE_DIR}/lib/spdlog/spdlogd.lib")
+else()
+    target_link_libraries(fix-client PUBLIC Qt${QT_VERSION_MAJOR}::Widgets "/usr/local/lib/libquickfix.dylib" "/Users/chenshun/CLionProjects/spdlog/build/libspdlog.a")
+endif()
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
@@ -105,9 +88,17 @@ set_target_properties(fix-client PROPERTIES
     WIN32_EXECUTABLE TRUE
 )
 
+message("-- GNUInstallDirs: ${GNUInstallDirs}")
+message("-- CMAKE_INSTALL_LIBDIR: ${CMAKE_INSTALL_LIBDIR}")
+
 include(GNUInstallDirs)
+
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/quickfix/share/quickfix 
+    DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/app/. FILES_MATCHING PATTERN "FIX*.xml"
+)
+
 install(TARGETS fix-client
-    BUNDLE DESTINATION .
+    BUNDLE DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/app/.
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
@@ -115,12 +106,6 @@ install(TARGETS fix-client
 if(QT_VERSION_MAJOR EQUAL 6)
     qt_finalize_executable(fix-client)
 endif()
-
-#if(WIN32)
-#target_include_directories(fix-client PUBLIC "E:/quickfix/include")
-#else()
-#target_include_directories(fix-client PUBLIC /usr/local/include)
-#endif()
 
 target_include_directories(fix-client PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/quickfix/include" "${CMAKE_CURRENT_SOURCE_DIR}/include/spdlog/include")
 target_include_directories(fix-client INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
