--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,9 +42,12 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         ClientApplication.cpp
         Entrust.h
         fixwidget.h fixwidget.cpp fixwidget.ui
+        OrderTableWidget.h OrderTableWidget.cpp
         Context.h
         Applicationbridge.h Applicationbridge.cpp
         FixClientLogFactory.h FixClientLogFactory.cpp
+        amenddialog.h amenddialog.cpp amenddialog.ui
+        canceldialog.h canceldialog.cpp canceldialog.ui
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET fix-client APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
