--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         FixClientLogFactory.h FixClientLogFactory.cpp
         amenddialog.h amenddialog.cpp amenddialog.ui
         canceldialog.h canceldialog.cpp canceldialog.ui
+        Resource.qrc
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET fix-client APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
