feat: 处理回报, 终态订单不能在更新了， 增加撤单按钮处理.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         Applicationbridge.h Applicationbridge.cpp
         FixClientLogFactory.h FixClientLogFactory.cpp
         amenddialog.h amenddialog.cpp amenddialog.ui
-        canceldialog.h canceldialog.cpp canceldialog.ui
+        CancelDialog.h CancelDialog.cpp CancelDialog.ui
         Resource.qrc
     )
 # Define target properties for Android with Qt 6 as:
